2009-09-17 Stephen Sinclair <radarsat1@gmail.com>
	* Fix all whitespace inconsistancies using 'indent -kr -nut'. (SS)

2009-03-07 Stephen Sinclair <radarsat1@gmail.com>
	* Fix some typos, grammar, and links in the documentation.
	* Remove TCP from TODO list.
	* Add recent contributors to the AUTHORS list.
	* Add previous release notes to the NEWS file.
	* Add note about MSVC in README.
	* Release 0.26.

2009-03-06 Stephen Sinclair <radarsat1@gmail.com>
	* Add a return value to lo_bundle_add_message().
	* Avoid pointer arithmetic on void* types for compilers that can't handle it.
	* Move all local variable declarations to the top of the scope.
	* Conditionally avoid the use of variable-argument macros if not GCC.
	* Fix multicast on Windows: join multicast group after bind() instead of before.
	* Avoid the use of C99 struct literals when giving timetag arguments.
	* Add premake4, used to generate MSVC project/solution files.
	* Add numerous typical kludges necessary to cover differences in MSVC.
	* Use log() instead of a while loop to calculate new data size.
	* Add return values for all functions that can potentially fail.
	* Add premake4-related files to the dist build.

2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
	* For multicast, enable SO_REUSEPORT as well as SO_REUSEADDR. (Mike Wozniewski)

2009-02-12 Stephen Sinclair <radarsat1@gmail.com>
	* Fix the definition of LO_TT_IMMEDIATE per the OSC spec. (Dominic Sacré)

2009-02-01 Stephen Sinclair <radarsat1@gmail.com>
	* Add function lo_message_get_timestamp(). (Alex McLean)
	* Fix magic constant in lo_timetag_diff. (Dominic Sacré)
	* Bump the LO_SO_VERSION version major number to resolve ABI
	  incompatibilities with previous versions.  In particular, the
	  addition of 'const' to an argument of lo_blob_new() in r80
	  constituted an API add and removal, hence the reset of the 3rd
	  number ('age') according to the libtool manual. (SS)

2009-01-04 Stephen Sinclair <radarsat1@gmail.com>